assets/css/common.css
@charset "UTF-8";/*!
 * 
 * Common styles across all themes.
 *
 */

div[class*='merge-lists-']{
    background-color: rgba(255, 255, 255,0.7);
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    border: 1px solid #B7B7B7;
}

.slide-header{
    font-size: 20px;
}

.slide-header h2{
    border-bottom: 1px solid #eeeeee;
    float: left;
    padding: 0px 0px 10px 0px;
}

#friendGraph,
#node-list{
    line-height: normal;
}

.node-close{
    text-transform: uppercase;
    fill: rgb(255, 108, 10);
}
.node-list-off {
    color: transparent;
    cursor: default;
}

.node-list-off:hover{
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;  
}

.node-list-on{
    padding: 0 5px 0 5px;
}

.node-list-on:hover{
    background-color: #b8cefa;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
}

#node-list li{
    font-size: 14px;
    margin: 2px;
    cursor: pointer;
}

#node-list ul{
    column-count: 3;
    -moz-column-count: 3;
    -webkit-column-count: 3;
    list-style: none;
    margin: 0px;
}

#friendGraph{
    width: 592px;
    border-left: 1px solid #000000;
}

.node-name {
    font-size: 20px;
}

.link,
.node,
.node-name,
text {
    cursor: pointer;
}

.circle {
    border: 1px solid #cccccc;
    margin-top: 15px;
    cursor: pointer;
    background: #ffffff     ;
}

.circle p {
    font-size: 24px;
    padding-left: 5px;
}

.circle p i {
    float:right;
    margin: 0 0 0 3px;
}

.circle ul {
    list-style: none;
    font-size: 18px;
}

#names-list {
    border-bottom: 2px solid #000000;
    padding-bottom: 20px;
    margin-bottom: 20px;
}

.circles-row {
    width: 100%;
    line-height: 1.5;
}

#names-list span {
    float: left;
    font-size: 14px;
    margin: 1px;
    padding: 0px 5px 0px 5px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    cursor: pointer;
    border-width: 1px;
    border-style: solid;
    border-color: transparent;
}

.circle-selected{
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, .5);
    -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, .5);
    -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, .5);
    border: 1px solid rgba(0, 0, 0, .5);
}

.circle-member{
    border-color: #333333 !important;
}

.merge-list span {
    float: left;
    font-size: 14px;
    padding-right: 5px;
    padding-left: 5px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    cursor: pointer;
}

.merge-list span:hover{
    background: #FFFF00;
}

.paging-div {
    font-size: 14px;
    text-align: center;
    width: 250px;
    margin: auto;
}

.paging-div button {
    margin: auto 15px;
}

.paginate_disabled_previous,
.paginate_disabled_next {
    visibility: hidden;
}

.container {
    width: 100%;
}

#lastSeenTable {
    font-size: 14px;
    line-height: 20px;
    background: #ffffff;
}

#lastSeenTable th {
    width: 10%;
    text-align: center;
}

#lastSeenTable tr td:first-child{
    border-right: 1px solid #dddddd;
    font-weight: bold;
}

#lastSeenTable tr td:not(:first-child){
    text-align: center;
}

.lists-row {
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    padding: 0px 0px 20px 0px;
    margin-bottom: 20px;
}

.disappear{
    color: transparent !important;
    pointer-events: none !important;
}

.current-merge {
    background-color: #FFFF00;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
}

.fat {
    font-weight: bold;
}

.btn-merge{
    margin-left: 5px;
    vertical-align: top;
}

.merge-div {
    font-size: 24px;
    text-align: left;
    float: left;
    width: 20%;
    margin-left: 30px;
}

.merge-list {
    list-style-type: none;
    font-size:  16px;
    line-height: 25px;
}

.merge-list li {
    cursor: pointer;
}

.shore{
    background: #ffffff;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    border: 10px solid brown;
    min-height: 10px;
    margin-bottom: 20px;
}
 .div-row{
    background: rgba(255,255,255,.5);
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    min-height: 10px;
    margin-bottom: 20px;
 }
.no-text-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: moz-none;
    -ms-user-select: none;
    user-select: none;
}

.btn-large {
    font-size: 20px;
}

.selected {
    background-color: #FFFF00;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
}

.chart {
    font-size: 18px;
    text-align: center;
}

.chart svg {
    position: relative;
    top: -75px;
}

.chart .node {
    cursor: move;
}


#error {
    position: absolute;
    top: 50%;
    left: 35%;
    display: none;
    background-color: #f0f0f0;
    border: 6px solid #ff0000;
    font-family: Arial;
    font-size: 16px;
    padding: 20px;	
    z-index: 5;
}

#next-arrow {
    position:fixed;
    cursor: pointer;
    right: 0;
    bottom: 0;
    margin: 5px;
    z-index: 5;
    max-width:10%
}

#next-arrow>img{
    max-width: 100%;
}

.delete {
    cursor: pointer;
    background-image: url('../img/elements/delete.png');
    background-repeat: no-repeat;
    background-position: 0 0px;
    background-size: 100%;
    width: 18px;
    height: 36px;
    display: inline-block;
}

.friend-input {
    vertical-align: text-bottom !important;
}

.friend-list {
    list-style-type: none;
    line-height: 3 !important;
    font-size: 24px;
    margin-bottom: 20px;
    column-count: 4;
    -moz-column-count: 4;
    -webkit-column-count: 4;
}

.friend-list>li>span{
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    cursor: pointer;
    padding: 5px 10px 8px 10px;
    border: 1px solid transparent;
    font-weight: bold;
}

.friend-list>li>span:hover{
    border-color: #ff0000;
    background-color: #ff7c7c;
    color: #ffffff;
}

#help-img {
    position:fixed;
    cursor: pointer;
    top: 0;
    left: 0;
    margin: 5px;
    z-index: 5;
    max-width:5%;
    display: none;
}

#help-img>a>img{
    max-width:100%;
}

.underline {
    text-decoration: underline;
}

@font-face {
  font-family: 'News Cycle';
  font-style: normal;
  font-weight: 400;
  src: local('../font/News_Cycle/News Cycle Regular'), local('../font/News_Cycle/NewsCycle-Regular'), url(https://themes.googleusercontent.com/static/fonts/newscycle/v9/9Xe8dq6pQDsPyVH2D3tMQr3hpw3pgy2gAi-Ip7WPMi0.woff) format('woff');
}
@font-face {
  font-family: 'News Cycle';
  font-style: normal;
  font-weight: 700;
  src: local('../font/News_Cycle/News Cycle Bold'), local('../font/News_Cycle/NewsCycle-Bold'), url(https://themes.googleusercontent.com/static/fonts/newscycle/v9/G28Ny31cr5orMqEQy6ljt3bFhgvWbfSbdVg11QabG8w.woff) format('woff');
}
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('../font/Lato/Lato Regular'), local('../font/Lato/Lato-Regular'), url(https://themes.googleusercontent.com/static/fonts/lato/v6/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
}
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  src: local('../font/Lato/Lato Bold'), local('../font/Lato/Lato-Bold'), url(https://themes.googleusercontent.com/static/fonts/lato/v6/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
}
@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 400;
  src: local('../font/Lato/Lato Italic'), local('../font/Lato/Lato-Italic'), url(https://themes.googleusercontent.com/static/fonts/lato/v6/RYyZNoeFgb0l7W3Vu1aSWOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
}
@font-face {
  font-family: 'Lato';
  font-style: italic;
  font-weight: 700;
  src: local('../font/Lato/Lato Bold Italic'), local('../font/Lato/Lato-BoldItalic'), url(https://themes.googleusercontent.com/static/fonts/lato/v6/HkF_qI1x_noxlxhrhMQYELO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
}

.popover{cursor:default;position:absolute;top:0;left:0;z-index:1010;display:none;max-width:276px;padding:1px;text-align:left;background-color:#ffffff;-webkit-background-clip:padding-box;-moz-background-clip:padding;background-clip:padding-box;border:1px solid #ccc;border:1px solid rgba(0, 0, 0, 0.2);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;-webkit-box-shadow:0 5px 10px rgba(0, 0, 0, 0.2);-moz-box-shadow:0 5px 10px rgba(0, 0, 0, 0.2);box-shadow:0 5px 10px rgba(0, 0, 0, 0.2);white-space:normal;}.popover.top{margin-top:-10px;}
.popover.right{margin-left:10px;}
.popover.bottom{margin-top:10px;}
.popover.left{margin-left:-10px;}
.popover-title{margin:0!important;padding:8px 14px;font-size:14px;font-weight:normal;line-height:18px;background-color:#f7f7f7;border-bottom:1px solid #ebebeb;-webkit-border-radius:5px 5px 0 0;-moz-border-radius:5px 5px 0 0;border-radius:5px 5px 0 0;}.popover-title:empty{display:none;}
.popover-content{padding:9px 14px;}
.popover .arrow,.popover .arrow:after{position:absolute;display:block;width:0;height:0;border-color:transparent;border-style:solid;}
.popover .arrow{border-width:11px;}
.popover .arrow:after{border-width:10px;content:"";}
.popover.top .arrow{left:50%;margin-left:-11px;border-bottom-width:0;border-top-color:#999;border-top-color:rgba(0, 0, 0, 0.25);bottom:-11px;}.popover.top .arrow:after{bottom:1px;margin-left:-10px;border-bottom-width:0;border-top-color:#ffffff;}
.popover.right .arrow{top:50%;left:-11px;margin-top:-11px;border-left-width:0;border-right-color:#999;border-right-color:rgba(0, 0, 0, 0.25);}.popover.right .arrow:after{left:1px;bottom:-10px;border-left-width:0;border-right-color:#ffffff;}
.popover.bottom .arrow{left:50%;margin-left:-11px;border-top-width:0;border-bottom-color:#999;border-bottom-color:rgba(0, 0, 0, 0.25);top:-11px;}.popover.bottom .arrow:after{top:1px;margin-left:-10px;border-top-width:0;border-bottom-color:#ffffff;}
.popover.left .arrow{top:50%;right:-11px;margin-top:-11px;border-right-width:0;border-left-color:#999;border-left-color:rgba(0, 0, 0, 0.25);}.popover.left .arrow:after{right:1px;border-right-width:0;border-left-color:#ffffff;bottom:-10px;}
.popover li, .popover span{float:none;}
/*.popover li:hover{background:rgba(255, 0, 0, 0.5);};*/

